# STM32

./: .gitignore  .project  CMakeLists.txt  Makefile  README.md  apt.dev  apt.txt  arm-none-eabi.cmake  gz
arch/: cortexM.mk  cortexM3.mk
cmake/: arm-none-eabi.cmake
cpu/: stm32f030.mk  stm32f030f4p6.mk
etc/: fstab.mk  fstab.rc
etc/udev/rules.d/: 49-FRDM.rules  49-STlink.rules  49-stlink.rules
hw/: BluePillF030.mk  qemu.mk
inc/: lib.h
src/: lib.cpp  lm3s6965.cpp
